# Ai-Specialist

./: .gitignore  README.md  benchmark_results.json  cost_calculator.py  entity_store.json  list_models.py  main.py  pyproject.toml  test.py
.gradio/flagged/: dataset1.csv
day02/: chat.py  main.py  models.py  test_raw.py
day03/: main_pipeline.py  step1_rewriter.py  step2_classifier.py  step3_responder.py
day04/: query_engine.py  router_query_engine.py  sample_docs.py  subquestion_engine.py
day04/documents/: company_policy.txt  product_manual.docx
day05/: Contract_extractor.py  api.py  base_extractor.py  invoice_extractor.py  resume_extractor.py
day06/: agent.py  tools.py  tools_definition.py
day07/: task.txt
day08/: naive_rag.py
day09/: hybrid.py  hybrid_retriever.py  test.py
day10/: hyde.py  hyde_retriever.py  raw.py  results_log.txt
day11/: ragas_eval.py  ragas_scorecard.csv  raw.py
day12/: README.md  compression_retriever.py  ingest.py  test_queries.py
day13/: README.md  test_agent.py  tools.py
day14/: task.txt
day15/: benchmark_task.py  failure_analysis.md  plan_execute_agent.py  react_agent.py  reflexion_agent.py
day16/: README.md  agent.py  s1_minimal_graph.py  s2_conditional.py  s3_sqlite_checkpointer.py  test_persistence.py
day17/: README.md  agents.py  main.py  output_The_Impact_of_Artificial_Intel.md  tasks.py  tools.py
day18/: README.md  entity_store.json  mem_config.py  memory_agent.py  test_memory.py
day19/: README.md  guarded_react_agent.py  guardrails_demo.py
day19/nemo_demo/: nemo_agent.py
day19/nemo_demo/config/: config.yml  main.co
day20/: local_agent.py  self_debug_demo.py
day21/: README.md  agent.py  app.py
day22/: Scope_of_freelancing_in_AI_agents_2026_20260630_1401.md  agent.py  app.py  artificial_intelligence_in_healthcare_2025_20260630_1407.md  langsmith_stats.py  test_tavily.py
day23/: README.md  dspy_extraction.py
day24/: cache_retrieval.py
day25/: README.md  app.py  benchmark.py  extractor.py  image_utils.py  schemas.py
day26/: README.md  benchmark.py  results.csv  runners.py  task.py
day27/: .env.example  .gitignore  README.md
day27/app/: config.py  main.py
day27/app/core/: security.py
day27/app/models/: schemas.py
day27/app/routes/: webhook.py
day27/app/services/: ai_processor.py  slack_notifier.py
day27/app/utils/: idempotency.py
day27/docs/: architecture.md
day27/tests/: test_ai_processor.py  test_slack_notifier.py  test_webhook_route.py
day28/: work.txt
day29-31/: project.md
day32/: benchmark.py  generate_dummy_data.py  insert_data.py  qdrant_query.py  qdrant_setup.py  query_test.py  sample_texts.json
day32-40/: benchmark.py  day35-to-40.txt  insert_data.py  qdrant_query.py  query_test.py  setup_db.py
