[project]
name = "ai-specialist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "crewai>=0.193.2",
    "crewai-tools>=0.76.0",
    "datasets>=5.0.0",
    "e2b-code-interpreter>=2.8.1",
    "fastapi>=0.136.3",
    "guardrails-ai>=0.10.2",
    "httpx>=0.28.1",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.7",
    "langchain-community<0.4.2",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.4",
    "langchain-google-vertexai>=3.2.4",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "llama-index>=0.14.22",
    "llama-index-embeddings-gemini>=0.4.2",
    "llama-index-embeddings-google-genai>=0.5.1",
    "llama-index-llms-gemini>=0.6.2",
    "llama-index-llms-google-genai>=0.9.5",
    "mem0ai>=2.0.8",
    "nemoguardrails",
    "pydantic>=2.13.4",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "requests>=2.34.2",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
